--- a/views/users.erb
+++ b/views/users.erb
@@ -33,7 +33,7 @@
               <%="Not overdue........yet....."%>
             <% end %>
           </p>
-          <% if book_overdue = true %>
+          <% if book_overdue==true %>
               <p> You owe: $<%= ((Time.new - book.due_date)/86400).round*(0.25) %></p>
           <% end %>
           <inputstyle="display:none">
