implement capybara tests

--- a/views/checkouts.erb
+++ b/views/checkouts.erb
@@ -4,6 +4,8 @@
   <input type="text" name="user_name" value="">
   <label for="">Book ID:</label>
   <input type="text" name="book_id" value="">
+  <label for="">Book Title</label>
+  <input type="text" name="book_title" value="">
   <button type="submit" name="button">Checkout</button>
 </form>
 </div>
